
package MyPacket;
option optimize_for = LITE_RUNTIME;

enum MessageType 
{
    PKT_CS_LOGIN = 1;
	PKT_SC_LOGIN = 2;
	
	PKT_CS_CHAT = 3;
	PKT_SC_CHAT = 4;
	
	PKT_CS_MOVE = 5;
	PKT_SC_MOVE = 6;

	PKT_CS_CRYPT = 7;
	PKT_SC_CRYPT = 8;
}

message SendingKeySet
{
    required uint32 DataLen = 1;
	required uint64 KeyBlob0 = 2;
	required uint64 KeyBlob1 = 3;
	required uint64 KeyBlob2 = 4;
	required uint64 KeyBlob3 = 5;
	required uint64 KeyBlob4 = 6;
	required uint64 KeyBlob5 = 7;
	required uint64 KeyBlob6 = 8;
	required uint64 KeyBlob7 = 9;
}

message CryptRequest
{
    required SendingKeySet SendKey = 1;
}

message CryptResult
{
    required SendingKeySet SendKey = 1;
}

message LoginRequest
{
    required int32 PlayerId = 1;
}

 message Position 
 {
    required float x = 1;
    required float y = 2;
	required float z = 3;
 }
	
message LoginResult
{
    required int32 PlayerId = 1;
	required string PlayerName = 2;
	required Position PlayerPos = 3;
}

message ChatRequest
{
    required int32 PlayerId = 1;
    required string PlayerMessage = 2;
}

message ChatResult
{
    required string PlayerName = 1;
    required string PlayerMessage = 2;
}

message MoveRequest
{
    required int32 PlayerId = 1;
	required Position PlayerPos = 2;
}

message MoveResult
{
    required int32 PlayerId = 1;
	required Position PlayerPos = 2;
}
